XDG-shell protocol version update

../../modules/video_output/wayland/xdg-shell.c:334:1: warning: missing initializer for field ‘configure_bounds’ of ‘const struct xdg_toplevel_listener’ [-Wmissing-field-initializers]
  334 | };
      | ^
In file included from ../../modules/video_output/wayland/xdg-shell.c:38:
./video_output/wayland/xdg-shell-client-protocol.h:1388:16: note: ‘configure_bounds’ declared here
 1388 |         void (*configure_bounds)(void *data,
      |                ^~~~~~~~~~~~~~~~