wayland: xdg-shell: add support for configure_bounds

xdg-toplevel's configure_bounds event report the maximum size the
compositor would like to handle for presenting the window the best way
possible, which prevents creating a bigger window than the desktop
screen itself.

Tested against kwin-git in embedded mode to check different desktop
sizes.

Closes #26730